--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -42,10 +42,10 @@
   "sap.ui5": {
     "flexEnabled": false,
     "rootView": {
-      "viewName": "icecreammachine.view.View1",
+      "viewName": "icecreammachine.view.App",
       "type": "XML",
       "async": true,
-      "id": "View1"
+      "id": "app"
     },
     "dependencies": {
 			"minUI5Version": "1.94.0",
@@ -69,7 +69,19 @@
 			"": {
 				"dataSource": "mainService",
 				"preload": true
-			}
+			},
+      "process": {
+        "type": "sap.ui.model.json.JSONModel",
+        "uri": "model/data/ProcessFlowData.json"
+      },
+      "reviews": {
+        "type": "sap.ui.model.json.JSONModel",
+        "uri": "model/data/Reviews.json"
+      },
+      "business": {
+        "type": "sap.ui.model.json.JSONModel",
+        "uri": "model/data/BusinessData.json"
+      }
     },
     "resources": {
       "css": [
@@ -80,29 +92,24 @@
     },
     "routing": {
       "config": {
-        "routerClass": "sap.m.routing.Router",
-        "viewType": "XML",
-        "async": true,
-        "viewPath": "icecreammachine.view",
-        "controlAggregation": "pages",
-        "controlId": "app",
-        "clearControlAggregation": false
+      "routerClass": "sap.m.routing.Router",
+      "viewType": "XML",
+      "viewPath": "icecreammachine.view",
+      "controlId": "app",
+      "controlAggregation": "pages"
       },
       "routes": [
-        {
-          "name": "RouteView1",
-          "pattern": "RouteView1",
-          "target": ["TargetView1"]
-        }
+      {
+        "pattern": "",
+        "name": "overview",
+        "target": "overview"
+      }
       ],
       "targets": {
-        "TargetView1": {
-          "viewType": "XML",
-          "transition": "slide",
-          "clearControlAggregation": false,
-          "viewId": "View1",
-          "viewName": "View1"
-        }
+      "overview": {
+        "viewId": "overview",
+        "viewName": "Overview"
+      }
       }
     }
   }
